# tamagotchi-smart-dim-flasher

./: .gitignore  CONTRIBUTING.md  README.en.md  README.md  README.zh-CN.md  pyproject.toml  start-web-ui-root.command  start-web-ui.command
dim_tool/: __init__.py  __main__.py  app.py  flash_service.py  local_assets.py
dim_tool/static/: app.js  style.css
dim_tool/templates/: index.html
docs/: USER-GUIDE.en.md  USER-GUIDE.zh-CN.md
smart-firmware-eng-jp/: smart-firmware-eng-jp_archive.torrent  smart-firmware-eng-jp_files.xml  smart-firmware-eng-jp_meta.sqlite  smart-firmware-eng-jp_meta.xml
tamasmart/: README.md
tools/: mock_flashrom.py
